--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Card Game</title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <script type="text/javascript" src="app.js"></script>
+  <title>Card Game</title>
+</head>
+
+<body>
+
+</body>
+
 </html>
